deploy/internal/k8s-dashboard/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-lb
  namespace: kubernetes-dashboard
  annotations:
    metallb.universe.tf/address-pool: dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
  type: LoadBalancer
  externalTrafficPolicy: Local
