deploy/internal/k8s-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - int-web
  routes:
    - kind: Rule
      match: Host(`k8s-dash.internal.ticklethepanda.co.uk`)
      services:
        - name: kubernetes-dashboard
          port: 443
          scheme: https
          serversTransport: skip-verify
